# react-native-worklets-core

./: .clang-format  .eslintrc.js  .gitignore  .prettierrc  CONTRIBUTING.md  LICENSE  README.md  TODO.md  index.js  index.ts  package.json  react-native-worklets-core.podspec  react-native-worklets.d.ts  react-native-worklets.podspec  tsconfig.json
.github/actions/setup/: action.yml
.github/workflows/: build-android.yml  build-ios.yml  ci.yml  validate-cpp.yml  validate-js.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/gradle/: fix-prefab.gradle
android/jni/: JniReactNativeWorkletsModule.cpp  JniReactNativeWorkletsModule.h  jni-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactlibrary/: ReactNativeWorkletsModule.java  ReactNativeWorkletsPackage.java
android/src/main/java/com/rnworklets/: ReactNativeWorkletsModule.java  ReactNativeWorkletsPackage.java
android/src/main/java/com/worklets/: WorkletsCorePackage.java  WorkletsModule.java  WorkletsPackage.java
android/src/newarch/: WorkletsSpec.java
android/src/oldarch/: WorkletsSpec.java
cpp/: JsRuntimeFactory.h  JsiBaseDecorator.h  JsiDispatcher.h  JsiWorklet.h  JsiWorkletApi.cpp  JsiWorkletApi.h  JsiWorkletContext.cpp  JsiWorkletContext.h  WKTJsRuntimeFactory.h  WKTJsiDispatcher.h  WKTJsiWorklet.h  WKTJsiWorkletApi.cpp  WKTJsiWorkletApi.h  WKTJsiWorkletContext.cpp  WKTJsiWorkletContext.h
cpp/base/: JsiHostObject.cpp  JsiHostObject.h  JsiPromise.h  WKTJsiHostObject.cpp  WKTJsiHostObject.h  WKTRuntimeAwareCache.cpp  WKTRuntimeAwareCache.h  WKTRuntimeLifecycleMonitor.h
cpp/decorators/: JsiConsoleDecorator.h  JsiJsDecorator.h  JsiPerformanceDecorator.h  JsiSetImmediateDecorator.h  WKTJsiConsoleDecorator.h  WKTJsiJsDecorator.h  WKTJsiPerformanceDecorator.h  WKTJsiSetImmediateDecorator.h
cpp/dispatch/: DispatchQueue.cpp  DispatchQueue.h  WKTDispatchQueue.cpp
cpp/hybridObject/: HybridObject.cpp  HybridObject.h  JSIConverter.h  TestHybridObject.h
cpp/jsi/: JsiDescribe.h  JsiHostObject.cpp  JsiHostObject.h  JsiVisitor.h
cpp/sharedvalues/: JsiSharedValue.h  WKTJsiSharedValue.h
cpp/utils/: JsiDescribe.h  JsiVisitor.h
cpp/worklets/: DispatchQueue.cpp  JsRuntimeFactory.h  JsiArrayWrapper.cpp  JsiArrayWrapper.h  JsiDispatchQueue.cpp  JsiDispatchQueue.h  JsiDispatcher.h  JsiObjectWrapper.h  JsiSharedValue.h  JsiWorklet.h  JsiWorkletApi.cpp  JsiWorkletApi.h  JsiWorkletContext.cpp  JsiWorkletContext.h  JsiWrapper.cpp  JsiWrapper.h
cpp/wrappers/: JsiArrayWrapper.h  JsiObjectWrapper.h  JsiPromiseWrapper.cpp  JsiPromiseWrapper.h  JsiWrapper.cpp  JsiWrapper.h  WKTArgumentsWrapper.h  WKTJsiArrayWrapper.h  WKTJsiObjectWrapper.h  WKTJsiPromiseWrapper.cpp  WKTJsiPromiseWrapper.h  WKTJsiWrapper.cpp  WKTJsiWrapper.h
docs/: USAGE.md  WORKLETS.md
example/: App.js  App.tsx  app.json  babel.config.js  index.js  metro.config.js  package.json
example/Tests/: RunInJsThread.tsx  RunInWorkletThread.tsx  TestWrapper.tsx  index.ts  sharedvalue-tests.ts  tests.ts  types.ts  useTestRunner.ts  useTests.ts  utils.ts  worklet-context-tests.ts  worklet-tests.ts  wrapper-tests.ts
example/android/: settings.gradle
example/android/app/: _BUCK  build.gradle
example/ios/: File.swift  Podfile
example/ios/RNWorklets/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/RNWorklets.xcodeproj/: project.pbxproj
example/ios/RNWorklets.xcworkspace/: contents.xcworkspacedata
example/ios/RNWorkletsTests/: RNWorkletsTests.m
example/ios/WorkletsExample/: AppDelegate.mm  Info.plist
example/ios/WorkletsExample.xcodeproj/: project.pbxproj
example/ios/WorkletsExampleTests/: WorkletsExampleTests.m
example/ios/example/: Info.plist  LaunchScreen.storyboard
example/ios/example.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: ReactNativeWorklets.h  ReactNativeWorklets.m  ReactNativeWorklets.mm  Worklets.h  Worklets.mm
ios/ReactNativeWorklets.xcodeproj/: project.pbxproj
ios/ReactNativeWorklets.xcworkspace/: contents.xcworkspacedata
ios/Worklets.xcodeproj/: project.pbxproj
package/: .editorconfig  .gitignore  package.json  react-native-worklets-core.podspec  react-native.config.js  tsconfig.json
package/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
package/android/src/main/cpp/: JNIOnLoad.cpp  JWorklets.cpp  JWorklets.h
package/android/src/main/java/com/margelo/worklets/: JNIOnLoad.java  Worklets.kt  WorkletsPackage.java  WorkletsPackage.kt
package/android/src/main/java/com/worklets/: WorkletsPackage.java
package/android/src/newarch/: WorkletsSpec.kt
package/android/src/oldarch/: WorkletsSpec.kt
package/cpp/: JSCallInvoker.h  NativeWorkletsModule.cpp  NativeWorkletsModule.h  WKTFunctionInvoker.cpp  WKTFunctionInvoker.h  WKTJsRuntimeFactory.h  WKTJsiBaseDecorator.h  WKTJsiDispatcher.h  WKTJsiPromise.cpp  WKTJsiPromise.h  WKTJsiWorklet.cpp  WKTJsiWorklet.h  WKTJsiWorkletApi.cpp  WKTJsiWorkletApi.h  WKTJsiWorkletContext.cpp  WKTJsiWorkletContext.h
package/cpp/base/: WKTJsiHostObject.cpp  WKTJsiHostObject.h  WKTRuntimeAwareCache.h  WKTRuntimeLifecycleMonitor.cpp  WKTRuntimeLifecycleMonitor.h
package/cpp/decorators/: WKTJsiConsoleDecorator.h  WKTJsiJsDecorator.h  WKTJsiPerformanceDecorator.h  WKTJsiSetImmediateDecorator.h
package/cpp/dispatch/: WKTDispatchQueue.cpp  WKTDispatchQueue.h
package/cpp/entrypoint/: InstallWorklets.cpp  InstallWorklets.h
package/cpp/sharedvalues/: WKTJsiSharedValue.h
package/example/: Gemfile  app.json  babel.config.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
package/ios/: NativeWorklets+NewArch.mm  NativeWorklets+OldArch.mm  NativeWorklets.h  Worklets.mm  WorkletsOnLoad.mm
package/scripts/: clang-format.sh
package/src/: ModuleNotFoundError.ts  NativeWorklets.ts  index.ts  types.ts  worklet.ts
plugin/: index.js
plugin/__tests__/: index.spec.js
src/: NativeSetup.ts  NativeWorklets.ts  decorators.ts  index.ts  types.ts  useWorklet.ts  worklet.ts
src/hooks/: useRunInJS.ts  useRunOnJS.ts  useSharedValue.ts  useWorklet.ts
src/plugin/: index.js
(+73 files in other folders)
